--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,16 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '1.18.0'
+          cache: true
 
       - name: Run build
         run: go build cmd/example.go
+
+      - name: Run tests
+        run: go test -json > TestResults-${{ matrix.go-version }}.json
+
+      - name: Upload Go test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: Go-results-${{ matrix.go-version }}
+          path: TestResults-${{ matrix.go-version }}.json
