--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Run build
         run: go build cmd/example.go
 
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: 6.0
+
       - name: Run tests
         run: go test -json > TestResults-${{ matrix.go-version }}.json
 
