--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,10 @@ jobs:
           mongodb-version: 6.0
 
       - name: Run tests
-        run: go test -json > TestResults-${{ matrix.go-version }}.json
+        run: go test -v ./...
 
-      - name: Upload Go test results
-        uses: actions/upload-artifact@v3
-        with:
-          name: Go-results-${{ matrix.go-version }}
-          path: TestResults-${{ matrix.go-version }}.json
+#      - name: Upload Go test results
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: Go-results-${{ matrix.go-version }}
+#          path: TestResults-${{ matrix.go-version }}.json
