--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,16 @@ jobs:
           mongodb-version: 6.0
 
       - name: Run tests
-        run: go test -v ./...
+        run: go test -v -covermode=count -coverprofile=coverage.out
+
+      - name: Convert coverage.out to coverage.lcov
+        uses: jandelgado/gcov2lcov-action@v1
+
+      - name: Coveralls Report
+        uses: coverallsapp/github-action@v1.1.3
+        with:
+          github-token: ${{ secrets.COVERALLS_TOKEN }}
+          path-to-lcov: coverage.lcov
 
 #      - name: Upload Go test results
 #        uses: actions/upload-artifact@v3
